# DnsSniffer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  dns_sniffer  log  main.c  meson.build  sniffer.c  sniffer.h
dns_sniffer/include/: dns_sniffer.h
dns_sniffer/src/: dns_sniffer.c
firewall/include/: firewall.h
firewall/src/: firewall.c
include/: dns_sniffer.h  firewall.h
src/: dns_sniffer.c  firewall.c
tests/src/: test_dns_sniffer.c
